<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">公益点评</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">开始</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="telephone">手机号</string>
    <string name="password">密码</string>
    <string name="sure">确定</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="otherlogin">第三方登录</string>
    <string name="findpassword">找回密码</string>
    <string name="gonext">下一步</string>
    <string name="inputverifycode">请输入验证码</string>
    <string name="second">秒</string>
    <string name="getcode">获取验证码</string>
    <string name="agree1">我同意</string>
    <string name="agree2">《公益点评用户协议》</string>
    <string name="inputphone">请输入手机号</string>
    <string name="inputpassword">请输入密码</string>
    <string name="inputpassword1">请输入6位以上密码</string>
    <string name="declear_register">我同意注册声明</string>
    <string name="program">项目</string>
    <string name="message">消息</string>
    <string name="me">我的</string>
    <string name="contribute_time">捐款次数</string>
    <string name="contribute_account">捐款金额</string>
    <string name="contribute_project">项目数</string>
    <string name="dianping">我要点评</string>
    <string name="cancle">取消</string>
    <string name="send">发送</string>
    <string name="detail">详情</string>
    <string name="need_account">需求金额</string>
    <string name="alreay_have">已捐</string>
    <string name="contribute_num">捐款人数</string>
    <string name="contribute_progress">捐款进度</string>
    <string name="contribute">捐款</string>
    <string name="yuan">元</string>
    <string name="yuan1">(元)</string>
    <string name="contribute_my">我要捐款</string>
    <string name="project_detail">项目详情</string>
    <string name="project_feedback">项目反馈</string>
    <string name="project_way">善款去向</string>
    <string name="project_comment">益友点评</string>
    <string name="project_lover">爱心名单</string>
    <string name="project_owner">发起人</string>
    <string name="project_organization">授权机构</string>
    <string name="wolaidianping">我来点评</string>
    <string name="selectpayway">选择捐款方式</string>
    <string name="payway">捐款方式</string>
    <string name="surepay">确定付款</string>
    <string name="paysuccess">捐款成功</string>
    <string name="show">我要炫耀</string>
    <string name="checkaccount">查看善款</string>
    <string name="findpwd">找回密码</string>
    <string name="inputnewpwd">请输入新密码</string>
    <string name="inputnewpwdagain">再次输入新密码</string>
    <string name="userinfor">用户资料</string>
    <string name="contribute_count">捐款总额</string>
    <string name="nickname">昵称</string>
    <string name="personalinfor">个性签名</string>
    <string name="save">保存</string>
    <string name="chargerecord">充值记录</string>
    <string name="contributerecord">捐款记录</string>
    <string name="address">地址</string>
    <string name="linkmobile">联系方式</string>
    <string name="organizationinfor">机构简介</string>
    <string name="myinfor">我的</string>
    <string name="myaccount">我的账户</string>
    <string name="project_account">项目账户</string>
    <string name="account_yue">账户余额(元)</string>
    <string name="inputchargeaccount">请输入充值金额(元)</string>
    <string name="chargeway">充值方式</string>
    <string name="set">设置</string>
    <string name="set_editinfor">编辑资料</string>
    <string name="set_chanagepwd">修改密码</string>
    <string name="set_clearcache">清除缓存</string>
    <string name="set_feedback">意见反馈</string>
    <string name="set_checkupdate">版本更新</string>
    <string name="set_aboutme">关于我们</string>
    <string name="set_invite">邀请注册</string>
    <string name="set_exit">注销登录</string>
    <string name="inputoldpwd">请输入旧密码</string>
    <string name="success">恭喜您!</string>
    <string name="changesuccess">密码修改成功!</string>
    <string name="unjoin">尚未加入</string>
    <string name="joined">已加入的</string>
    <string name="invited">已邀请</string>
    <string name="writeyouoption">留下您的宝贵意见...</string>
    <string name="messapge">消息</string>
    <string name="pinglun">评论</string>
    <string name="sys_notice">系统通知</string>
    <string name="pleasewait">请稍后</string>
    <string name="setinfor">设置个人信息</string>
    <string name="editinfor">编辑资料</string>
    <string name="complete">完成</string>
    <string name="contentdescription">图片</string>
    <string name="nicklength">不超过10个字</string>
    <string name="signlength">不超过20个字</string>
    <string name="addpicture">添加图片</string>
    <string name="editpicture">编辑图片</string>
    <string name="project_fabu">发布的项目</string>
    <string name="project_juankuan">捐款的项目</string>
    <string name="project_shoucang">收藏的项目</string>
    <string name="scroe">积分</string>
    <string name="charge">我要充值</string>
    <string name="tixian">已提现</string>
    <string name="tixian1">提现</string>
    <string name="yue">余额</string>
    <string name="alreay_account">已捐金额</string>
    <string name="tixian_account">已提金额</string>
    <string name="project_yue">项目余额</string>
    <string name="project_tixian">我要提现</string>
    <string name="project_shouzhu">受助人</string>
    <string name="first_zhzmj">正在募捐</string>
    <string name="first_yzss">已在实施</string>
    <string name="first_sswc">实施完成</string>
    <string name="inputdianping">留下您的宝贵点评...</string>
    <string name="detail_ckmb">筹款目标</string>
    <string name="detail_ckmb1">(发布机构申请捐助款总额的</string>
    <string name="detail_ckmb2">为项目管理费)</string>
    <string name="detail_gong">共</string>
    <string name="detail_rjz">人捐助</string>
    <string name="detail_yc">已筹</string>
    <string name="detail_jk">捐款</string>
    <string name="detail_wyjz">我要捐助</string>
    <string name="detail_ckgd">查看更多</string>
    <string name="feedback_empty1">正等待项目发起人反馈，请继续关注!</string>
    <string name="feedback_empty2">请继续关注“</string>
    <string name="feedback_empty3">”</string>
    <string name="trace_empty1">正等待项目实施人员反馈，请继续关注!</string>
    <string name="comment_empty">还没有益友点评，快抢个沙发!</string>
    <string name="donation_empty">还没有捐助，期待益友们的爱心!</string>
    <string name="yue1">余额支付</string>
    <string name="yue2">使用账户余额进行支付</string>
    <string name="zhifubao1">支付宝支付</string>
    <string name="zhifubao2">推荐有支付宝账号的用户使用</string>
     <string name="yinlian1">中国银联支付</string>
    <string name="yinlian2">储蓄卡方式付费</string>
    <string name="back">返回</string>
    <string name="shareto">分享到</string>
    <string name="weixin">微信</string>
    <string name="hide_name">匿名</string>
    <string name="program_empty">目前没有符合条件的项目</string>
    <string name="deal_donation_money">系统正在处理中,捐款记录请稍后查看</string>
    <string name="nonetwork">网络连接出现错误,请重新检查</string>
    
    <!-- =============================ShareSDK String=================================== -->
    <string name="more">更多</string>
    <string name="sm_item_demo">接口</string>
    <string name="sm_item_auth">授权</string>
    <string name="sm_item_wechat">微信</string>
    <string name="sm_item_yixin">易信</string>
    <string name="sm_item_customer">自定义接口</string>
    <string name="sm_item_fl_weibo">关注新浪微博</string>
    <string name="sm_item_fl_tc">关注腾讯微博</string>
    <string name="sm_item_share_view">摇一摇截屏分享</string>
    <string name="sm_item_visit_website">关注官方网站</string>
    <string name="sm_item_about">Demo版本 Ver. %s</string>
    <string name="plz_choose_wechat">请选择微信客户端完成操作</string>
    <string name="get_token_format">获取%s的AccessToken</string>
    <string name="get_user_info_format">获取%s授权用户资料</string>
    <string name="get_other_info_format">获取%s其他用户资料</string>
    <string name="share_to_format">分享到%s</string>
    
    <string name="demo_share_all_gui">分享全部（有分享界面）</string>
    <string name="demo_share_all">分享全部（无界面，直接分享）</string>
    <string name="demo_get_access_token">获取AccessToken</string>
	<string name="demo_get_my_info">获取授权用户资料</string>
    <string name="demo_get_other_info">获取其他用户资料</string>
	
	<string name="get_sina_friends_list">获取新浪微博关注列表</string>
	<string name="get_tencent_friends_list">获取腾讯微博关注列表</string>
	<string name="customer_douban">搜索用户</string>
	<string name="customer_facebook">获取通知列表</string>
	<string name="customer_nemb">获取推荐话题</string>
	<string name="customer_renren">上传照片到用户的相册</string>
	<string name="customer_sina">获取微博主页列表</string>
	<string name="customer_qzone">发表日志到QQ空间</string> 
	<string name="customer_tencent">获取我的粉丝列表</string>
	<string name="customer_twitter">获取主页列表</string>
	<string name="customer_kaixin">获取可能认识的人</string>
	<string name="customer_sohu">获取好友列表</string>
	<string name="customer_youdao">获取笔记本列表</string>
	<string name="customer_suishenkan">获取搜狐随身看书签列表</string>
	<string name="customer_tumblr">获取Tumblr用户Post列表</string>
	
	<string name="not_yet_authorized">尚未授权</string>
	<string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
	<string name="share_content_short">ShareSDK不仅集成简单、支持如微信、新浪微博、腾讯微博等社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
	<string name="evenote_title">ShareSDK是一个神奇的SDK</string>
	
	<string name="update">文字分享</string>
	<string name="image_upload">图片分享（本地图片）</string>
	<string name="image_upload_bitmap">图片分享（Bitmap对象）</string>
	<string name="image_upload_url">图片分享（网络图片）</string>
	<string name="emoji_upload">表情分享（本地图片）</string>
	<string name="emoji_upload_url">表情分享（网络图片）</string>
	<string name="emoji_upload_bm">表情分享（Bitmap对象）</string>
	<string name="music_upload">音乐分享</string>
	<string name="video_upload">视频分享</string>
	<string name="webpage_upload">网页分享（本地图片）</string>
	<string name="webpage_upload_bitmap">网页分享（Bitmap对象）</string>
	<string name="webpage_upload_url">网页分享（网络图片）</string>
	<string name="app_upload">应用分享（携带文件）</string>
	<string name="app_upload_extinfo">应用分享（携带脚本）</string>
	<string name="file_upload">文件分享</string>
	<string name="share_to_wechat">微信好友</string>
	<string name="share_to_moment">微信朋友圈</string>
	<string name="share_to_favorite">微信收藏</string>
	<string name="wechat_demo_title">微信分享Demo标题</string>
	<string name="qzone_add_blog_sample"><h1>QQ互联</h1><font color='red'>轻松分享,</font><font color='green'>快乐生活。</font><a href='http://connect.qq.com'>详情请看。</a><img src='http://imgcache.qq.com/ptlogin/head/1_100.gif'></img></string>
	<string name="wechat_client_is_not_installed_correctly">微信客户端未安装或版本太旧</string>
	<string name="wechat_client_not_support_following_operation">微信客户端不支持第三方应用执行关注功能</string>
	<string name="share_to_yixin">易信好友</string>
	<string name="share_to_yixin_moment">易信朋友圈</string>
	<string name="share_to_yixin_favorite">易信收藏</string>
	<string name="yixin_demo_title">易信分享Demo标题</string>
	<string name="receive_rewards">恭喜你得到%s个金币！</string>
	<string name="buy_success">购买成功</string>
	<string name="buy_failed">购买失败</string>
	<string name="laiwang">来往</string>
	<string name="qzone_customer_share_style">自定义QQ空间分享风格</string>
</resources>
