<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_20"
    android:background="@color/white"
    android:orientation="horizontal" >

    <EditText
        android:id="@id/edittext_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_25"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_25"
        android:layout_weight="2"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/inputverifycode"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/qianhui"
        android:textSize="@dimen/textsize_8" />

    <ImageView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@color/background"
        android:contentDescription="@string/contentdescription" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="3" >

        <TextView
            android:id="@id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30"
            android:gravity="center_vertical"
            android:text="@string/getcode"
            android:textColor="@color/title"
            android:textSize="@dimen/textsize_8"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@id/layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/textview_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/title"
                android:textSize="@dimen/textsize_8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:text="@string/second"
                android:textColor="@color/qianhui"
                android:textSize="@dimen/textsize_7" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>