<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/bg_LinearLayout" >
    
    <!-- 标题栏 -->
    <include layout="@layout/title_text"/>
    
    <!-- 输入新密码 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/margin_50"
        android:orientation="vertical">
        
        <EditText 
            android:id="@id/edittext_0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_30"
            android:background="@color/transparent"
            android:text=""
            android:hint="@string/inputnewpwd"
            android:textColorHint="@color/qianhui"
            android:textSize="@dimen/textsize_8"/>
        
        <ImageView 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_30"
            android:background="@color/background"
            android:contentDescription="@string/contentdescription"/>
        
        <EditText 
            android:id="@id/edittext_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_30"
            android:background="@color/transparent"
            android:text=""
            android:hint="@string/inputnewpwdagain"
            android:textColorHint="@color/qianhui"
            android:textSize="@dimen/textsize_8"/>
        
        
    </LinearLayout>
</LinearLayout>
