<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/bg_LinearLayout" >

    <!-- 标题栏 -->

    <include layout="@layout/title_text" />

    <include
        layout="@layout/name_password"
        android:paddingTop="@dimen/margin_30" />

    <Button
        android:id="@id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_70"
        android:background="@drawable/btn_login"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_9" />

    <TextView
        android:id="@id/textview_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/forgetpassword"
        android:textColor="@color/shenhui"
        android:textSize="@dimen/textsize_8" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_weight="1"
            android:contentDescription="@string/contentdescription"
            android:src="@color/qianhui" />

        <TextView
            android:id="@id/textview_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/otherlogin"
            android:textColor="@color/qianhui"
            android:textSize="@dimen/textsize_8" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginRight="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/contentdescription"
            android:src="@color/qianhui" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:orientation="horizontal">
        
        <ImageButton 
            android:id="@+id/login_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_weixin"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:contentDescription="@string/contentdescription"/>
        
        <ImageButton 
            android:id="@+id/login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_qq"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:contentDescription="@string/contentdescription"/>
        
        <ImageButton 
            android:id="@+id/login_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_weibo"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:contentDescription="@string/contentdescription"/>
        
    </LinearLayout>

</LinearLayout>